name:                discord-eval
version:             0.1.0.0
synopsis:            A frontend for the Eval bot on Discord
description:         A frontend for the EVal bot on Dicosrd.
license:             BSD3
license-file:        LICENSE
author:              mniip
maintainer:          mniip@mniip.com
copyright:           (C) 2019 mniip
category:            Development
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

executable discord-eval
  main-is:             Main.hs
  other-modules:       DupQueue
  build-depends:       base == 4.*,
                       discord-haskell,
                       containers,
                       transformers,
                       mtl,
                       exceptions,
                       deepseq,
                       lens,
                       time,
                       text,
                       stm,
                       aeson,
                       process,
                       bytestring,
                       network
  default-language:    Haskell2010
