name:                discord-eval
version:             0.1.0.0
synopsis:            A frontend for the Eval bot on Discord
description:         A frontend for the EVal bot on Dicosrd.
license:             BSD3
license-file:        LICENSE
author:              mniip
maintainer:          mniip@mniip.com
copyright:           (C) 2019 mniip
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable discord-eval
  main-is:             Main.hs
  other-modules:       DupQueue, JsonUtil, Pastebin, StateM
  build-depends:       base == 4.*,
                       aeson,
                       attoparsec,
                       binary,
                       bytestring,
                       containers,
                       deepseq,
                       discord-haskell >= 1.6,
                       exceptions,
                       http-api-data,
                       http-client,
                       http-client-tls,
                       http-types,
                       lens,
                       mtl,
                       network,
                       process,
                       scientific,
                       stm,
                       text,
                       time,
                       transformers,
                       vector
  default-language:    Haskell2010
